Templates, Legacy: fix horizontal scrollbar on member directories on twentyseventeen
Props elhardoum

Fixes #7917

git-svn-id: https://buddypress.svn.wordpress.org/trunk@12226 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-templates/bp-legacy/css/twentyseventeen.css
+++ b/src/bp-templates/bp-legacy/css/twentyseventeen.css
@@ -3,7 +3,7 @@
 This is the BuddyPress companion stylesheet for
 the WordPress twentyseventeen theme.
 
-@version 3.0.0
+@version 3.2.0
 
 This sheet supports the primary BuddyPress styles in buddypress.css
 
@@ -1931,6 +1931,7 @@ body.colors-light #buddypress div#invite-list {
 #buddypress div.message-search form,
 #buddypress li.groups-members-search form {
 	border: 1px solid rgba(190, 190, 190, 0.6);
+	position: relative;
 	border-radius: 2px;
 	background-clip: padding-box;
 	overflow: hidden;
